JedisCluster 缓存测试-通过

--- a/script/src/main/resources/datasource.properties
+++ b/script/src/main/resources/datasource.properties
@@ -1,9 +1,10 @@
 # product environment
-#jdbc.driver=com.mysql.jdbc.Driver
-#jdbc.username=cloud2018
-#jdbc.password=cloud2018%1122
-#jdbc.url=jdbc:mysql://newmysql.smarteoc.com/environmental3.2?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
-#zookeeper.address=hzzh-cloudera-1.ynycloud.com:2181,hzzh-cloudera-2.ynycloud.com:2181,hzzh-cloudera-3.ynycloud.com:2181
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.username=cloud2018
+jdbc.password=cloud2018%1122
+jdbc.url=jdbc:mysql://newmysql.smarteoc.com/environmental3.2?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
+zookeeper.address=hzzh-cloudera-1.ynycloud.com:2181,hzzh-cloudera-2.ynycloud.com:2181,hzzh-cloudera-3.ynycloud.com:2181
+redisClusterUris=10.29.224.89:7000,10.31.228.200:7000,10.29.224.97:7000,10.30.106.13:7000,10.29.224.97:7001,10.29.224.89:7001,10.31.228.200:7001,10.30.106.13:7001
 
 #------------------------------------------------------
 # test environment
@@ -12,12 +13,14 @@
 #jdbc.password=Cms123
 #jdbc.url=jdbc:mysql://mysql.test2.hzzh.xyz/environmental3.2?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
 #zookeeper.address=host161.test2.hzzh.xyz:2181,host162.test2.hzzh.xyz:2181,host163.test2.hzzh.xyz:2181
+#redisClusterUris=host161.test2.hzzh.xyz:7000,host161.test2.hzzh.xyz:7001,host162.test2.hzzh.xyz:7000,host162.test2.hzzh.xyz:7001,host163.test2.hzzh.xyz:7000,host163.test2.hzzh.xyz:7001
 
 
 #-------------------------------------------------------
 # dev environment
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.username=cms
-jdbc.password=Cms123
-jdbc.url=jdbc:mysql://mysql.dev.hzzh.xyz/environmental3.2?useUnicode=true&characterEncoding=utf8
-zookeeper.address=10.1.170.80:2181
+#jdbc.driver=com.mysql.jdbc.Driver
+#jdbc.username=cms
+#jdbc.password=Cms123
+#jdbc.url=jdbc:mysql://mysql.dev.hzzh.xyz/energy_management?useUnicode=true&characterEncoding=utf8
+#zookeeper.address=10.1.170.80:2181
+#redisClusterUris=10.1.170.218:7000,10.1.170.218:7001,10.1.170.219:7000,10.1.170.219:7001,10.1.170.220:7000,10.1.170.220:7001
