--- a/script/pom.xml
+++ b/script/pom.xml
@@ -115,6 +115,14 @@
             <version>1.8.0-beta2</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
     </dependencies>
 
      <build>
@@ -142,7 +150,7 @@
                          <configuration>
                              <transformers>
                                  <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                     <mainClass>com.hacker.script.env.alarmTransfer.AlarmTransfer</mainClass>
+                                     <mainClass>com.hacker.script.redis.PostRedisData</mainClass>
                                  </transformer>
                                  <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                                      <resource>META-INF/spring.handlers</resource>
