删除脚本，添加 stream debugger 调试，但是 IDEA 版本有点低，没有通过测试

--- a/Test/pom.xml
+++ b/Test/pom.xml
@@ -32,5 +32,21 @@
 
     </dependencies>
 
+    <!--  这个都加上，不然有时候项目的编译版本莫名其妙的回到的5  -->
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <skip>true</skip>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>utf8</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 
 </project>
