--- a/java8/pom.xml
+++ b/java8/pom.xml
@@ -4,9 +4,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.hacker.dubbo</groupId>
-    <artifactId>service-common-interface</artifactId>
+    <groupId>com.hacker</groupId>
+    <artifactId>java8</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+    </dependencies>
 
     <!--  这个都加上，不然有时候项目的编译版本莫名其妙的回到的5  -->
     <build>
